[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <title> I am learning this thing </title>
     </head>
     <body>
+        <a href="https://onlinecourses.nptel.ac.in/noc16_cs23/course"> This is the website </a>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
