[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <a href="https://onlinecourses.nptel.ac.in/noc16_cs23/course"> This is the website </a>
-        <div> class="centre:grey </div>
+        <div> class="centre:grey" </div>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
