[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,14 +5,14 @@
         <title> I am learning this thing </title>
     </head>
     <body>
+        <div> class="centre: grey"</div>
         <a href="https://onlinecourses.nptel.ac.in/noc16_cs23/course"> This is the website </a>
-        <div> class="centre:grey" </div>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="Jellyfish.png" class="img-medium"/>
         </div>
         <br>
         <div class="corner purple">
-            MY NAME IS HASSAN
+            this is aqueef mota and he is learning the course on the centre
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
