[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,7 @@
         <title> I am learning this thing </title>
     </head>
     <body>
+        <div> class="centre: grey"</div>
         <a href="https://onlinecourses.nptel.ac.in/noc16_cs23/course"> This is the website </a>
         <div class="center">
             <img src="Jellyfish.png" class="img-medium"/>
