[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
         <div> class="centre: grey"</div>
         <a href="https://onlinecourses.nptel.ac.in/noc16_cs23/course"> This is the website </a>
         <div class="center">
-            <img src="Jellyfish.png" class="img-medium"/>
+            <img src="https://cloud.imad.hasura.io/rstatic/dist/53034ebcba2fcc0cbccf30fcd1b3bb14.png" class="img-medium"/>
         </div>
         <br>
         <div class="corner purple">
