[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     <body>
         <a href="https://onlinecourses.nptel.ac.in/noc16_cs23/course"> This is the website </a>
         <div class="center">
-            <img src="https://cloud.imad.hasura.io/rstatic/dist/53034ebcba2fcc0cbccf30fcd1b3bb14.png" class="img-medium"/>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Panda_Cub_from_Wolong,_Sichuan,_China.JPG" class="img-medium"/>
         </div>
         <br>
         <div class="corner purple">
