--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <a href="https://onlinecourses.nptel.ac.in/noc16_cs23/course"> This is the website </a>
-        <div class="center">
+        <div class="bottom">
             <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Panda_Cub_from_Wolong,_Sichuan,_China.JPG" class="img-medium"/>
         </div>
         <table border="1">
