[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
         <title> I am learning this thing </title>
     </head>
     <body>
-        <a href="https://onlinecourses.nptel.ac.in/noc16_cs23/course"> This is the website </a>
+        <a href="https://onlinecourses.nptel.ac.in/noc16_cs23/course"> Click on this line to see what course he is doing now</a>
         <div class="bottom">
             <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Panda_Cub_from_Wolong,_Sichuan,_China.JPG" class="img-medium"/>
         </div>
