--- a/ui/index.html
+++ b/ui/index.html
@@ -2,11 +2,10 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
-        <title> I am learning this thing </title>
+        <title> Login </title>
     </head>
     <body>
-        <a href="https://onlinecourses.nptel.ac.in/noc16_cs23/course"> Click on this line to see what course he is doing now</a>
-        <div class="bottom">
+        <div class="top">
             <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Panda_Cub_from_Wolong,_Sichuan,_China.JPG" class="img-medium"/>
         </div>
         <table border="5">
