[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,18 @@
         <title> Login </title>
     </head>
     <body>
-        <div class="right">
+        <div id="website">
+            <form>
+                Username :<input type="text" name="Username" />
+                <br/>
+                Password :<input tupr="password" name="pass" />
+                <br />
+               <input type="submit" value="Submit">
+              
+                
+            </form>
+             </div>
+        <div class="centre">
             <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Panda_Cub_from_Wolong,_Sichuan,_China.JPG" class="img-medium"/>
         </div>
         <table border="5">
