[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,7 @@
         <title> Login </title>
     </head>
     <body>
+        <h1> Log in to the new user friendly website</h1>
         <div id="website">
             <form>
                 Username :<input type="text" name="Username" />
@@ -16,9 +17,9 @@
                 
             </form>
              </div>
-        <div class="centre">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Panda_Cub_from_Wolong,_Sichuan,_China.JPG" class="img-medium"/>
-        </div>
+        <div class="bottom">
+            <img src="https://youtu.be/f7nzTlj2KxY?list=PLC1322B5A0180C946">
+            </div>
         <table border="5">
             <tr>
                  <th>Name</th>
