[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
                 
             </form>
              </div>
-        <div class="bottom">
+        <div class="bottom: 30px">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="0" allowfullscreen></iframe>
             </div>
         <table border="5">
