--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,9 @@
         <title> Login </title>
     </head>
     <body>
+        <div class="centre">
         <h1> Log in to the new user friendly website</h1>
+        </div>
         <div id="website">
             <form>
                 Username :<input type="text" name="Username" />
