[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,18 @@
         <title> Login </title>
     </head>
     <body>
-        <div class="banner">
+        <div class="wrapper">
+            <div class="google-header-bar  centered">
+  <div class="header content clearfix">
+  <div class="logo logo-w" aria-label="Google"></div>
+  </div>
+  </div>
+  <div class="main content clearfix">
+<div class="banner">
+  <h2>
+  Please re-enter your password
+  </h2>
+</div>
         <h1> Log in to the new user friendly website</h1>
         </div>
         <div id="website">
