[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,18 +5,7 @@
         <title> Login </title>
     </head>
     <body>
-        <div class="wrapper">
-            <div class="google-header-bar  centered">
-  <div class="header content clearfix">
-  <div class="logo logo-w" aria-label="Google"></div>
-  </div>
-  </div>
-  <div class="main content clearfix">
-<div class="banner">
-  <h2>
-  Please re-enter your password
-  </h2>
-</div>
+        <div>
         <h1> Log in to the new user friendly website</h1>
         </div>
         <div id="website">
@@ -30,7 +19,8 @@
                 
             </form>
              </div>
-        <div class="bottom">
+             <
+        <div class="gcb-pull-right">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="0" allowfullscreen></iframe>
             </div>
         <table border="5">
