--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,7 @@
              </div>
             
         <div class="gcb-pull-right">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" align="right" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="1" allowfullscreen></iframe>
             </div>
         <table border="5">
             <tr>
