[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,6 +7,7 @@
     <body>
         <div>
         <h1> Log in to the new user friendly website</h1>
+        <p> Provide with basic id and login number</p>
         </div>
         <div id="website">
             <form>
@@ -21,7 +22,7 @@
              </div>
             
         <div class="gcb-pull-right">
-            <iframe width="560" height="315" align="right" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="1" allowfullscreen></iframe>
+            <iframe width="490" height="200" align="bottom" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="1" allowfullscreen></iframe>
             </div>
         <table border="5">
             <tr>
