--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
              <p> If interested you can go on our youtube site also </p></div>
             
         <div class="gcb-pull-right">
-            <iframe width="490" height="200" align="bottom" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="1" allowfullscreen></iframe>
+            <iframe width="490" height="200" align="centre" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="1" allowfullscreen></iframe>
             </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
