[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,6 @@
     <body>
         <div>
         <h1> Log in to the new user friendly website</h1>
-        <p> Provide with basic id and login number</p>
         </div>
         <div id="website">
             <form>
@@ -26,6 +25,7 @@
         <div class="gcb-pull-right">
             <iframe width="490" height="200" align="centre" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="1" allowfullscreen></iframe>
             </div>
+            <div><p> Provide with basic id and login number</p></div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
