[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
         <title> Login </title>
     </head>
     <body>
-        <div>
+        <div class="centre: bold">
         <h1> Log in to the new user friendly website</h1>
         </div>
         <div id="website">
@@ -19,13 +19,13 @@
                 
             </form>
              </div>
-             <div> 
+             <div class="arial"> 
              <p> If interested you can go on our youtube site also </p></div>
             
         <div class="gcb-pull-right">
             <iframe width="490" height="200" align="centre" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="1" allowfullscreen></iframe>
             </div>
-            <div><p> Provide with basic id and login number</p></div>
+            <div class="Courier New Italic"><p> Provide with basic id and login number</p></div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
