[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,10 @@
         <title> Login </title>
     </head>
     <body>
-        <div class="centre: bold">
+        <div>
+            <iframe align="centre" font="bold">
         <h1> Log in to the new user friendly website</h1>
+        </iframe>
         </div>
         <div id="website">
             <form>
