[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,9 +6,7 @@
     </head>
     <body>
         <div>
-            <iframe align="centre" font="bold">
         <h1> Log in to the new user friendly website</h1>
-        </iframe>
         </div>
         <div id="website">
             <form>
@@ -21,13 +19,13 @@
                 
             </form>
              </div>
-             <div class="arial"> 
+             <div> 
              <p> If interested you can go on our youtube site also </p></div>
             
         <div class="gcb-pull-right">
             <iframe width="490" height="200" align="centre" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="1" allowfullscreen></iframe>
             </div>
-            <div class="Courier New Italic"><p> Provide with basic id and login number</p></div>
+            <div><p> Provide with basic id and login number</p></div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
