--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
              <p> If interested you can go on our youtube site also </p></div>
             
         <div class="gcb-pull-right">
-            <iframe width="490" height="200" align="centre" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="1" allowfullscreen></iframe>
+            <iframe width="490" height="200" align="centre" border="1" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="1" allowfullscreen></iframe>
             </div>
             <div><p> Provide with basic id and login number</p></div>
         <script type="text/javascript" src="/ui/main.js">
