[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,12 +20,12 @@
             </form>
              </div>
              <div> 
-             <p> If interested you can go on our youtube site also </p></div>
+             <p1> If interested you can go on our youtube site also </p1></div>
             
         <div class="gcb-pull-right">
             <iframe width="490" height="200" align="centre" border="1" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="1" allowfullscreen></iframe>
             </div>
-            <div><p> Provide with basic id and login number</p></div>
+            <div><p2> Provide with basic id and login number</p2></div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
