--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
                <input type="submit" value="Submit">
                    </form>
              </div>
-             <div id="center"> 
+             <div class= "center"> 
              <p1> If interested you can go on our youtube site also </p1></div>
             
         <div class="gcb-pull-right">
