[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             <form>
                 Username :<input type="text" name="Username" />
                 <br/>
-                Password :<input tupr="password" name="pass" />
+                Password :<input type="password" name="pass" />
                 <br />
                <input type="submit" value="Submit">
                    </form>
