--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,9 @@
         <div class="center">
             <iframe width="490" height="200" align="centre" border="10" src="https://www.youtube.com/embed/f7nzTlj2KxY?list=PLC1322B5A0180C946" frameborder="1" allowfullscreen></iframe>
             </div>
-            <div><p2> Provide with basic id and login number</p2></div>
+            <div class= "center">
+                <p2> Provide with basic id and login number</p2>
+                </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
