[imad-console] Updates ui/hash.html

--- a/ui/hash.html
+++ b/ui/hash.html
@@ -1,13 +1,14 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
   <head>
-  <meta charset=utf-8 />
-  <title>Web Audio API</title>
-  <script>
-   console.log("Some JavaScript code has been executed");
-  </script>
+    <style>
+      body {
+        margin: 0px;
+        padding: 0px;
+      }
+    </style>
   </head>
   <body>
-    <h1>JavaScript debugging using the dev tool console</h1>
-  </body>
-</html>
+    <canvas id="myCanvas" width="578" height="200"></canvas>
+    </body>
+    </html>
