--- a/ui/hash.html
+++ b/ui/hash.html
@@ -10,5 +10,5 @@
   </head>
   <body>
     <canvas id="myCanvas" width="578" height="200"></canvas>
-    </body>
-    </html>
+    <script type="text/javascript" src="/ui/main.js">
+    </script>
