--- a/ui/elephant.html
+++ b/ui/elephant.html
@@ -1,5 +1,8 @@
+<!doctype html>
 <html>
     <head>
+        <link href="/ui/style.css" rel="stylesheet" </link>
+        <title> Elephant</title>
         
     </head>
 </html>
