[imad-console] Updates ui/elephant.html

--- a/ui/elephant.html
+++ b/ui/elephant.html
@@ -5,4 +5,49 @@
         <title> Elephant</title>
         
     </head>
+    <body>
+        <ul id="nav">
+<li><a href="#">Home</a></li>
+<li class="subs"><a href="#s1">Menu 1</a>
+
+<ul>
+
+<li><a href="#">Submenu A</a></li>
+
+<li><a href="#">Submenu B</a></li>
+
+<li><a href="#">Submenu C</a></li>
+
+<li><a href="#">Submenu D</a></li>
+
+</ul>
+
+</li>
+
+<li class="subs"><a href="#s2">Menu 2</a>
+
+<ul>
+
+<li><a href="#">Submenu E</a></li>
+
+<li><a href="#">Submenu F</a></li>
+
+<li><a href="#">Submenu G</a></li>
+
+<li><a href="#">Submenu H</a></li>
+
+</ul>
+
+</li>
+
+<li><a href="#">Menu 3</a></li>
+
+<li><a href="#">Menu 4</a></li>
+
+<li><a href="#">Menu 5</a></li>
+
+<li><a href="https://www.script-tutorials.com/facebook-like-menu-responsive/">Back to Responsive menu tutorial</a></li>
+</ul>
+
+    </body>
 </html>
