[imad-console] Updates ui/elephant.html

--- a/ui/elephant.html
+++ b/ui/elephant.html
@@ -46,7 +46,7 @@
 
 <li><a href="#">Menu 5</a></li>
 
-<li><a href="">Back to Responsive menu tutorial</a></li>
+<li><a href="www.google.com">Back to Responsive menu tutorial</a></li>
 </ul>
 
     </body>
