[imad-console] Updates ui/elephant.html

--- a/ui/elephant.html
+++ b/ui/elephant.html
@@ -49,5 +49,40 @@
 <li><a href="www.google.com">Back to Responsive menu tutorial</a></li>
 </ul>
 
+<select id="nav_v2" onchange="window.location.href = this.options[this.selectedIndex].value">
+
+<option selected="selected" value="">Choise Page...</option>
+
+<option value="#">Submenu 1</option>
+
+<option value="#">Submenu A</option>
+
+<option value="#">Submenu B</option>
+
+<option value="#">Submenu C</option>
+
+<option value="#">Submenu D</option>
+
+<option value="#">Submenu 2</option>
+
+<option value="#">Submenu E</option>
+
+<option value="#">Submenu F</option>
+
+<option value="#">Submenu G</option>
+
+<option value="#">Submenu H</option>
+
+<option value="#">Submenu 3</option>
+
+<option value="#">Submenu 4</option>
+
+<option value="#">Submenu 5</option>
+
+<option value="https://www.script-tutorials.com/facebook-like-menu-responsive/">Back to Responsive menu tutorial</option>
+
+</select>
+
+
     </body>
 </html>
