[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
         <title> Login </title>
     </head>
-    <body>
+    <body background="https://i.ytimg.com/vi/OeeAGFnYoBI/maxresdefault.jpg">
         <div class= "center">
         <h1> Log in to the new user friendly website</h1>
         </div>
